--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -7,7 +7,7 @@
       "collection_sort": true,
       "use_logo": false,
       "transparent_header": true,
-      "main_linklist": "main-menu",
+      "main_linklist": "menu-menu-v2-0",
       "menu_top_padding": "5",
       "content_top_padding": "95",
       "twitter_link": "",
@@ -1001,8 +1001,8 @@
   "current": {
     "use_logo": true,
     "use_logo_home": true,
-    "main_linklist": "main-menu",
-    "dropdown_column_links": "10",
+    "main_linklist": "menu-menu-v2-0",
+    "dropdown_column_links": "3",
     "logo_top_padding": "0",
     "menu_top_padding": "5",
     "content_top_padding": "80",
