syncing content from shopify + two_column styling

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1002,7 +1002,7 @@
     "use_logo": true,
     "use_logo_home": true,
     "main_linklist": "menu-menu-v2-0",
-    "dropdown_column_links": "2",
+    "dropdown_column_links": "1",
     "logo_top_padding": "0",
     "menu_top_padding": "5",
     "content_top_padding": "80",
@@ -1020,9 +1020,9 @@
     "instagram_link": "http:\/\/instagram.com\/littlelotusbaby",
     "linkedin_link": "",
     "flickr_link": "",
-    "email_link": "info@littlelotusbaby.com",
-    "link_color": "#1b9589",
-    "link_hover_color": "#f18888",
+    "email_link": "",
+    "link_color": "#87d1d1",
+    "link_hover_color": "#87d1d1",
     "sidebar_nav_color": "#8a8c8f",
     "sidebar_nav_color_hover": "#f18888",
     "featured_text": "#080000",
@@ -1053,7 +1053,7 @@
     "bg_fixed": false,
     "bg_stretched": false,
     "sub_footer_link_color": "#337db0",
-    "sub_footer_link_color_hover": "#e15486",
+    "sub_footer_link_color_hover": "#87d1d1",
     "sub_footer_border_color": "#fefcfb",
     "sub_footer_color": "#fefcfb",
     "footer_link_color": "#e15486",
@@ -1067,8 +1067,8 @@
     "logo_font_size": "26",
     "logo_color": "#303030",
     "logo_color_home": "#262626",
-    "headline_typeface_method": "websafe",
-    "headline_google_webfont_font": "Merriweather",
+    "headline_typeface_method": "google_webfonts",
+    "headline_google_webfont_font": "Poppins",
     "headline_websafe_font": "Futura, 'Century Gothic', AppleGothic, sans-serif",
     "headline_weight": "lighter",
     "headline_font_style": "none",
@@ -1079,7 +1079,7 @@
     "headline_border": "none",
     "headline_border_color": "#ded6c7",
     "nav_typeface_method": "google_webfonts",
-    "nav_google_webfont_font": "Open+Sans",
+    "nav_google_webfont_font": "Poppins",
     "nav_websafe_font": "Futura, 'Century Gothic', AppleGothic, sans-serif",
     "nav_weight": "normal",
     "nav_font_style": "uppercase",
@@ -1091,7 +1091,7 @@
     "nav_letter_spacing": "1",
     "nav_shadow": false,
     "regular_typeface_method": "google_webfonts",
-    "regular_google_webfont_font": "Lato",
+    "regular_google_webfont_font": "Poppins",
     "regular_websafe_font": "Helvetica, Arial, sans-serif",
     "regular_weight": "lighter",
     "regular_font_style": "none",
@@ -1137,39 +1137,39 @@
     "slideshow_width_narrow": false,
     "slideshow_arrows": false,
     "slideshow_speed": "8",
-    "slideshow_headline_size": "40",
+    "slideshow_headline_size": "43",
     "slideshow_headline_weight": "lighter",
-    "slideshow_subtitle_size": "30",
+    "slideshow_subtitle_size": "18",
     "slideshow_subtitle_weight": "lighter",
-    "slideshow_shadow": true,
+    "slideshow_shadow": false,
     "video_embed": "",
     "video_width": "max",
     "video_width_px": "300",
     "video_position": "1",
     "slideshow_1_enabled": true,
-    "image_1_alt_text": "",
-    "image_1_headline": "Help your baby sleep better with NASA inspired temperature control products.",
-    "image_1_subtitle": "",
+    "image_1_alt_text": "20% off your entire purchase; use F&F2016",
+    "image_1_headline": "<strong>Friends and Family Event<\/strong> 20% off your entire purchase",
+    "image_1_subtitle": "CODE: <strong>F&F2016<\/strong> | ENDS: 11\/22",
     "image_1_text_color": "#ffffff",
-    "image_1_text_align": "left",
-    "image_1_button_text": "Watch our video",
-    "image_1_link": "\/pages\/watch-our-video",
-    "slideshow_2_enabled": false,
-    "image_2_alt_text": "",
-    "image_2_headline": "Learn about our unique technology & design.",
-    "image_2_subtitle": "",
-    "image_2_text_color": "#fdfdfd",
+    "image_1_text_align": "center",
+    "image_1_button_text": "Shop Now",
+    "image_1_link": "\/collections\/baby-swaddles-and-sleep-sacks",
+    "slideshow_2_enabled": true,
+    "image_2_alt_text": "Perfect Temperature, Better Sleep",
+    "image_2_headline": "Perfect Temperature, Better Sleep",
+    "image_2_subtitle": "Our NASA inspired fabric keeps your baby at an ideal temperature, helping them to sleep better.",
+    "image_2_text_color": "#8a8c8f",
     "image_2_text_align": "center",
     "image_2_button_text": "Learn more",
     "image_2_link": "http:\/\/littlelotusbaby.com\/pages\/technology",
     "slideshow_3_enabled": true,
     "image_3_alt_text": "",
-    "image_3_headline": "Each purchase helps to save a premature baby in the developing world.",
+    "image_3_headline": "",
     "image_3_subtitle": "",
     "image_3_text_color": "#ffffff",
     "image_3_text_align": "center",
-    "image_3_button_text": "1:1 Model",
-    "image_3_link": "http:\/\/littlelotusbaby.com\/pages\/about-us",
+    "image_3_button_text": "Shop Now",
+    "image_3_link": "\/collections\/baby-swaddles-and-sleep-sacks",
     "slideshow_4_enabled": false,
     "image_4_alt_text": "",
     "image_4_headline": "The perfect baby gift",
@@ -1259,8 +1259,8 @@
     "disqus_enabled": false,
     "disqus_shortname": "",
     "newsletter_enabled": true,
-    "newsletter_text": "News & Updates",
-    "newsletter_description": "Sign up to get the latest on sales, new releases and more …",
+    "newsletter_text": "JOIN OUR MAILING LIST",
+    "newsletter_description": "Sign up to receive the latest on sales, news releases and more.",
     "newsletter_success_text": "Thank you for joining our mailing list!",
     "newsletter_system": "mailchimp",
     "mailchimp_link": "\/\/littlelotusbaby.us10.list-manage.com\/subscribe\/post?u=4666ebef9b71585cb8200a7e0&amp;id=9a1ce44c00",
