updating config from theme

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1146,7 +1146,7 @@
     "video_width": "max",
     "video_width_px": "300",
     "video_position": "1",
-    "slideshow_1_enabled": true,
+    "slideshow_1_enabled": false,
     "image_1_alt_text": "20% off your entire purchase; use F&F2016",
     "image_1_headline": "<strong>Friends and Family Event<\/strong> 20% off your entire purchase",
     "image_1_subtitle": "CODE: <strong>F&F2016<\/strong> | ENDS: 11\/22",
@@ -1162,7 +1162,7 @@
     "image_2_text_align": "center",
     "image_2_button_text": "Learn more",
     "image_2_link": "http:\/\/littlelotusbaby.com\/pages\/technology",
-    "slideshow_3_enabled": true,
+    "slideshow_3_enabled": false,
     "image_3_alt_text": "",
     "image_3_headline": "",
     "image_3_subtitle": "",
