updating from latest pull of code changes done via admin interface

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1146,37 +1146,37 @@
     "video_width": "max",
     "video_width_px": "300",
     "video_position": "1",
-    "slideshow_1_enabled": false,
-    "image_1_alt_text": "20% off your entire purchase; use F&F2016",
-    "image_1_headline": "<strong>Friends and Family Event<\/strong> 20% off your entire purchase",
-    "image_1_subtitle": "CODE: <strong>F&F2016<\/strong> | ENDS: 11\/22",
+    "slideshow_1_enabled": true,
+    "image_1_alt_text": "",
+    "image_1_headline": "",
+    "image_1_subtitle": "",
     "image_1_text_color": "#ffffff",
     "image_1_text_align": "center",
-    "image_1_button_text": "Shop Now",
-    "image_1_link": "\/collections\/baby-swaddles-and-sleep-sacks",
+    "image_1_button_text": "",
+    "image_1_link": "https:\/\/littlelotusbaby.com\/pages\/technology",
     "slideshow_2_enabled": true,
-    "image_2_alt_text": "Perfect Temperature, Better Sleep",
-    "image_2_headline": "Perfect Temperature, Better Sleep",
-    "image_2_subtitle": "Our NASA inspired fabric keeps your baby at an ideal temperature, helping them to sleep better.",
+    "image_2_alt_text": "",
+    "image_2_headline": "",
+    "image_2_subtitle": "",
     "image_2_text_color": "#8a8c8f",
     "image_2_text_align": "center",
-    "image_2_button_text": "Learn more",
-    "image_2_link": "http:\/\/littlelotusbaby.com\/pages\/technology",
-    "slideshow_3_enabled": false,
+    "image_2_button_text": "",
+    "image_2_link": "https:\/\/littlelotusbaby.com\/collections\/baby-swaddles-and-sleep-sacks",
+    "slideshow_3_enabled": true,
     "image_3_alt_text": "",
     "image_3_headline": "",
     "image_3_subtitle": "",
     "image_3_text_color": "#ffffff",
-    "image_3_text_align": "center",
-    "image_3_button_text": "Shop Now",
+    "image_3_text_align": "left",
+    "image_3_button_text": "",
     "image_3_link": "\/collections\/baby-swaddles-and-sleep-sacks",
     "slideshow_4_enabled": false,
     "image_4_alt_text": "",
-    "image_4_headline": "The perfect baby gift",
+    "image_4_headline": "",
     "image_4_subtitle": "",
     "image_4_text_color": "#ffffff",
     "image_4_text_align": "center",
-    "image_4_button_text": "SHOP NOW",
+    "image_4_button_text": "",
     "image_4_link": "",
     "slideshow_5_enabled": false,
     "image_5_alt_text": "",
