--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -689,7 +689,7 @@
       "use_discover": false,
       "use_western_union": false,
       "show_multiple_currencies": false,
-      "newsletter_popup": false,
+      "newsletter_popup": true,
       "newsletter_popup_form": true,
       "logo_typeface_method": "websafe",
       "headline_typeface_method": "google_webfonts",
@@ -972,7 +972,7 @@
       "use_discover": false,
       "use_western_union": false,
       "show_multiple_currencies": false,
-      "newsletter_popup": false,
+      "newsletter_popup": true,
       "newsletter_popup_form": true,
       "logo_typeface_method": "google_webfonts",
       "headline_typeface_method": "google_webfonts",
@@ -999,6 +999,12 @@
     }
   },
   "current": {
+    "newsletter_popup": true,
+    "newsletter_popup_form": true,
+    "newsletter_popup_page": "2016-halloween-giveaway",
+    "newsletter_popup_seconds": "0",
+    "newsletter_popup_days": "0",
+    "newsletter_popup_max_width": "600",
     "use_logo": true,
     "use_logo_home": true,
     "main_linklist": "menu-menu-v2-0",
@@ -1286,8 +1292,8 @@
     "newsletter_popup": true,
     "newsletter_popup_form": true,
     "newsletter_popup_page": "2016-halloween-giveaway",
-    "newsletter_popup_seconds": "6",
-    "newsletter_popup_days": "30",
+    "newsletter_popup_seconds": "0",
+    "newsletter_popup_days": "0",
     "newsletter_popup_max_width": "600",
     "checkout_header_image": "",
     "checkout_use_storefront_logo": true,
