syncing from shopify

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -999,12 +999,6 @@
     }
   },
   "current": {
-    "newsletter_popup": true,
-    "newsletter_popup_form": true,
-    "newsletter_popup_page": "2016-halloween-giveaway",
-    "newsletter_popup_seconds": "0",
-    "newsletter_popup_days": "0",
-    "newsletter_popup_max_width": "600",
     "use_logo": true,
     "use_logo_home": true,
     "main_linklist": "menu-menu-v2-0",
@@ -1291,9 +1285,9 @@
     "default_currency": "USD",
     "newsletter_popup": true,
     "newsletter_popup_form": true,
-    "newsletter_popup_page": "2016-halloween-giveaway",
-    "newsletter_popup_seconds": "0",
-    "newsletter_popup_days": "0",
+    "newsletter_popup_page": "join-the-little-lotus-community",
+    "newsletter_popup_seconds": "6",
+    "newsletter_popup_days": "30",
     "newsletter_popup_max_width": "600",
     "checkout_header_image": "",
     "checkout_use_storefront_logo": true,
